<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dss</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnStack">STACK</string>
    <string name="btnLink">LINK LIST</string>
    <string name="btnTree">TREE</string>
    <string name="btnfifoQueue">FIFO QUEUE</string>
    <string name="title_activity_stack_dr">STACK</string>
    <string name="title_activity_tree_dr">TREE</string>
    <string name="title_activity_fifoqueue_dr">FIFO QUEUE</string>
    <string name="title_activity_circularqueue_dr">CIRCULAR QUEUE</string>
    <string name="title_activity_link_list_dr">LINKLIST</string>
    <string name="btnPush">PUSH</string>
    <string name="btnPop">POP     </string>
    <string name="btnPeek">PEEK</string>
    <string name="txtBlank">" "</string>
    <string name="btnSize">SIZE</string>
    <string name="btnClear">CLEAR</string>
    <string name="btnDocs">DOCS</string>
    <string name="btnAdd">ADD</string>
    <string name="btnDelete">DELETE</string>
    <string name="btnDisplay">DISPLAY</string>
    <string name="btnReverse">REVERSE</string>
    <string name="btnQAdd">ENQUEUE</string>
    <string name="btnQdel">DEQUEUE</string>
    <string name="btnCirQueue">C QUEUE</string>
    <string name="btnCfifo">FIFO</string>
    <string name="btncircularQueue">CIRCULAR QUEUE</string>
    <string name="btnQueue">QUEUE</string>
    <string name="btnC">Cqueue</string>
    <string name="title_activity_main_page">DataStructure</string>
    <string name="mainPage">Main page</string>
    <string name="title_activity_red__black_dr">Red_Black_dr</string>
    <string name="RB">REDBLACK</string>
    <string name="title_activity_dual_stack">DualStack</string>
    <string name="btnDualStack">DUALSTACK</string>
    <string name="title_activity_double_link">DoubleLink</string>
    <string name="btnDoubleLink">DOUBLE_LINK_LIST</string>
    <string name="btnQuickSort">QUICKSORT</string>
    <string name="title_activity_modified_link_list">ModifiedLinkList</string>
    <string name="AddAtBeg">ADD_AT_BEG</string>
    <string name="AddAtMiddle">ADD_MIDDLE</string>
    <string name="btnAddEnd">ADD_END</string>
    <string name="title_activity_bubble_sort">BubbleSort</string>
    <string name="btnBubbleSort">BUBBLE_SORT</string>
    <string name="title_activity_selection_sort">SelectionSort</string>
    <string name="btnSelectionSort">SELECTION_SORT</string>
    <string name="title_activity_avl_tree">AvlTree</string>
    <string name="btnAvlTree">AVL_TREE</string>
    <string name="title_activity_quick_sort1">QuickSort</string>
    <string name="btnQuickSort1">QUICKSORT1</string>
    <string name="title_activity_bubble_sort1">BubbleSort</string>
    <string name="title_activity_selection_sort1">SelectionSort</string>
    <string name="btnBubbleSort1">BUBBLE_SORT</string>
    <string name="btnSelectionSort1">SELECTION_SORT</string>
    <string name="title_activity_avl_tree1">AvlTree</string>
    <string name="btnAvlTree1">AVLTREE</string>
    <string name="LRRot">clickLR</string>
    <string name="LLRot">clickLL</string>
    <string name="RLRot">clickRL</string>
    <string name="RRROt">clickRR</string>
    <string name="title_activity_ll">LLActivity</string>
    <string name="title_activity_rr">RRActivity</string>
    <string name="title_activity_lr">LRActivity</string>
    <string name="title_activity_rl">RLActivity</string>
    <string name="onClickLL">onClickLL</string>
    <string name="onClickRR">onClickRR</string>
    <string name="onClickLR">onClickLR</string>
    <string name="onClickRL">onClickRL</string>
    <string name="onClickSimulate">onClickSimulate</string>
    <string name="onClickSearch">onClickSearch</string>
    <string name="onClickSimulateB">onClickSimulateB</string>
    <string name="title_activity_linear_search">Linear Search</string>
    <string name="title_activity_insertionsort">Insertion Sort</string>
    <string name="title_activity_insertion">InsertionActivity</string>
    <string name="unsort_list">Unsorted Array</string>
    <string name="sort_list">Sorted Array</string>
    <string name="title_activity_merge_sort">Merge Sort</string>
    <string name="title_activity_quick_sort">Quick Sort</string>
    <string name="onClickTreeSlide">onClickTreeSlide</string>

</resources>