<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/display"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayMain" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="33dp" >

        <Button
            android:id="@+id/btnBubbleSort1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/white"
            android:height="60dp"
            android:onClick="@string/btnBubbleSort1"
            android:text="SORTING" />

        <Button
            android:id="@+id/btnQueue"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/butStack"
            android:layout_marginTop="21dp"
            android:background="@drawable/white"
            android:height="60dp"
            android:onClick="@string/btnQueue"
            android:text="@string/btnQueue" />

        <Button
            android:id="@+id/btnLink"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnQueue"
            android:layout_alignRight="@+id/btnBubbleSort1"
            android:background="@drawable/white"
            android:height="60dp"
            android:onClick="LINK"
            android:text="@string/btnLink" />

        <Button
            android:id="@+id/btnLinearDocs"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btnQueue"
            android:layout_marginTop="29dp"
            android:background="@drawable/white"
            android:height="60dp"
            android:onClick="@string/onClickSearch"
            android:text="SEARCHING"
            android:width="106dp" />

        <Button
            android:id="@+id/btnS_Tree"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnLinearDocs"
            android:layout_alignLeft="@+id/btnLink"
            android:background="@drawable/white"
            android:height="60dp"
            android:onClick="@string/btnTree"
            android:text="@string/btnTree" />

        <Button
            android:id="@+id/butStack"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btnBubbleSort1"
            android:background="@drawable/white"
            android:height="60dp"
            android:onClick="@string/btnStack"
            android:text="@string/btnStack" />
    </RelativeLayout>

</RelativeLayout>