<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fifo"

    tools:context=".AvlTree1" >

    <TextView
        android:id="@+id/textAvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="AVL TREE"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:id="@+id/RelativeLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAvl"
        android:layout_centerHorizontal="true"
        android:gravity="center"
 >

        <Button
            android:id="@+id/btnLLrot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="26dp"
            android:layout_toRightOf="@+id/button6"
            android:background="@drawable/custom_color"
            android:height="65dp"
            android:onClick="@string/RLRot"
            android:padding="@dimen/btnStackControl"
            android:text="RL \n SetUp"
            android:width="90dp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="22dp"
            android:layout_toRightOf="@+id/button5"
            android:background="@drawable/custom_color"
            android:onClick="@string/LLRot"
            android:padding="@dimen/btnStackControl"
            android:text="LL \n SetUp"
            android:width="90dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="26dp"
            android:layout_toRightOf="@+id/btnLLrot"
            android:background="@drawable/custom_color"
            android:height="65dp"
            android:onClick="@string/LRRot"
            android:padding="@dimen/btnStackControl"
            android:text="LR \n SetUp"
            android:width="90dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="76dp"
            android:background="@drawable/custom_color"
            android:onClick="@string/RRROt"
            android:padding="@dimen/btnStackControl"
            android:text="RR\n SetUp"
            android:width="90dp" />

        <Button
            android:id="@+id/btnIDocs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="29dp"
            android:layout_toRightOf="@+id/button4"
            android:background="@drawable/custom_color"
            android:height="65dp"
            android:onClick="@string/btnDocs"
            android:padding="@dimen/btnStackControl"
            android:text="DOCS"
            android:width="90dp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:background="@drawable/cornerimage"
        android:src="@drawable/avlback" />

</RelativeLayout>