<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stack"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Stack_dr" >

    <TextView
        android:id="@+id/txtLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btnStack" />

    <TextView
        android:id="@+id/Snode1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtLink"
        android:layout_marginBottom="21dp"
        android:background="@drawable/nodestack"
        android:gravity="center"
        android:minWidth="100dp"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/Snode2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Snode1"
        android:layout_alignRight="@+id/Snode1"
        android:background="@drawable/nodestack"
        android:gravity="center"
        android:minWidth="100dp"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/Snode3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Snode2"
        android:layout_alignLeft="@+id/Snode2"
        android:background="@drawable/nodestack"
        android:gravity="center"
        android:minWidth="100dp"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/Snode4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Snode3"
        android:layout_alignLeft="@+id/Snode3"
        android:background="@drawable/nodestack"
        android:gravity="center"
        android:minWidth="100dp"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/Snode5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Snode4"
        android:layout_alignLeft="@+id/Snode4"
        android:background="@drawable/nodestack"
        android:gravity="center"
        android:minWidth="100dp"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/Snode6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Snode5"
        android:layout_alignRight="@+id/Snode5"
        android:background="@drawable/nodestack"
        android:gravity="center"
        android:minWidth="100dp"
        android:text="@string/txtBlank"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLink"
        android:gravity="center" >

        <Button
            android:id="@+id/btnSize"
            style="?android:attr/buttonStyleSmall"
            android:background="@drawable/custom_color"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/btnPeek"
            android:onClick="@string/btnSize"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnSize" />

        <Button
            android:id="@+id/btnPeek"
            style="?android:attr/buttonStyleSmall"
            android:background="@drawable/custom_color"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/btnPop"
            android:onClick="PEEK"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnPeek" />

        <Button
            android:id="@+id/btnPush"
            style="?android:attr/buttonStyleSmall"
            android:background="@drawable/custom_color"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="112dp"
            android:onClick="PUSH"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnPush" />

        <Button
            android:id="@+id/btnPop"
            style="?android:attr/buttonStyleSmall"
            android:background="@drawable/custom_color"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/btnPush"
            android:onClick="POP"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnPop" />

        <Button
            android:id="@+id/btnClear"
            style="?android:attr/buttonStyleSmall"
            android:background="@drawable/custom_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="32dp"
            android:onClick="@string/btnClear"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnClear" />

        <Button
            android:id="@+id/btnStackDocs"
            style="?android:attr/buttonStyleSmall"
            android:background="@drawable/custom_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="23dp"
            android:layout_toRightOf="@+id/btnSize"
            android:onClick="@string/btnDocs"
            android:padding="@dimen/btnStackControl"
            android:text="@string/btnDocs" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/arr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Snode2"
        android:layout_marginRight="22dp"
        android:layout_toLeftOf="@+id/Snode1"
        android:src="@drawable/arrow"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/arr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/arr1"
        android:layout_below="@+id/Snode3"
        android:src="@drawable/arrow"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/arr3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/arr2"
        android:layout_below="@+id/Snode4"
        android:src="@drawable/arrow"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/arr4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/arr3"
        android:layout_below="@+id/Snode5"
        android:src="@drawable/arrow"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/arr5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/arr4"
        android:layout_alignTop="@+id/Snode5"
        android:src="@drawable/arrow"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/arr6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/arr5"
        android:layout_alignTop="@+id/Snode6"
        android:src="@drawable/arrow"
        android:visibility="invisible" />

</RelativeLayout>